# master-cpp-course

./: .gitignore  README.md
02_01/: CMakeLists.txt
02_01/include/: binet.h
02_01/src/: binet.cpp  main.cpp
02_02/: CMakeLists.txt
02_02/include/: solver.h
02_02/src/: main.cpp  solver.cpp
02_03/: CMakeLists.txt
02_03/include/: classifier.h
02_03/src/: classifier.cpp  main.cpp
02_04/: CMakeLists.txt
02_04/include/: armstrong.h
02_04/src/: armstrong.cpp  main.cpp
02_05/: CMakeLists.txt
02_05/include/: exponent.h
02_05/src/: exponent.cpp  main.cpp
02_06/: CMakeLists.txt
02_06/include/: analyser.h
02_06/src/: analyser.cpp
02_07/src/: analyser.cpp  main.cpp
02_08/: CMakeLists.txt
02_08/include/: collatz.h
02_08/src/: collatz.cpp  main.cpp
02_09/: CMakeLists.txt
02_09/include/: divisors.h
02_09/src/: divisors.cpp  main.cpp
02_09/test/: test_divisors.cpp
02_10/: CMakeLists.txt
02_10/include/: sort.h
02_10/src/: main.cpp  sort.cpp
02_10/test/: test_sort.cpp
03_01/: CMakeLists.txt
03_01/include/: rectangle.h
03_01/src/: main.cpp  rectangle.cpp
03_01/test/: test_rectangle.cpp
03_02/: CMakeLists.txt
03_02/include/: Circle.hpp  Square.hpp  Triangle.hpp
03_02/src/: Circle.cpp  Square.cpp  Triangle.cpp  main.cpp
03_02/test/: test_shapes.cpp
03_03/: CMakeLists.txt
03_03/include/: List.hpp
03_03/src/: List.cpp  main.cpp
03_03/test/: test_list.cpp
03_04/: CMakeLists.txt
03_04/include/: Entity.hpp
03_04/src/: Entity.cpp  main.cpp
03_04/test/: test_entity.cpp
03_05/: CMakeLists.txt
03_05/include/: Client.hpp  Entity.hpp
03_05/src/: Client.cpp  main.cpp
03_05/test/: test_client.cpp
03_06/: CMakeLists.txt
03_06/include/: Circle.hpp  Polygon.hpp  Rectangle.hpp  Shape.hpp  Square.hpp  Triangle.hpp
03_06/src/: Circle.cpp  Rectangle.cpp  Triangle.cpp  main.cpp
03_06/test/: test_shapes.cpp
03_07/: CMakeLists.txt
03_07/include/: Vector.hpp
03_07/src/: main.cpp
03_07/test/: test_vector.cpp
03_09/: CMakeLists.txt
03_09/include/: IPv4.hpp
03_09/src/: main.cpp
03_09/test/: test_ipv4.cpp
03_10/: CMakeLists.txt
03_10/include/: Rational.hpp
03_10/src/: main.cpp
03_10/test/: test_rational.cpp
